# mattermost-rust

./: Cargo.toml  README.md  openapi.yaml
.openapi-generator/: FILES
docs/: AddChannelMemberRequest.md  AddGroupMembersRequest.md  AddOn.md  AddTeamMemberRequest.md  AttachDeviceIdRequest.md  AuthenticationApi.md  BleveApi.md  BoardsLimits.md  BotsApi.md  BrandApi.md  Channel.md  ChannelMemberWithTeamData.md  ChannelMemberWithTeamDataAllOf.md  ChannelNotifyProps.md  ChannelWithTeamData.md  ChannelWithTeamDataAllOf.md  ChannelsApi.md  CheckUserMfa200Response.md  CheckUserMfaRequest.md  CloudApi.md  CloudCustomer.md  ClusterApi.md  Command.md  CommandsApi.md  Compliance.md  ComplianceApi.md  ConfigServiceSettings.md  ConvertBotToUserRequest.md  CreateBotRequest.md  CreateChannelRequest.md  CreateCommandRequest.md  CreateGroupRequest.md  CreateGroupRequestGroup.md  CreateIncomingWebhookRequest.md  CreateJobRequest.md  CreateOAuthAppRequest.md  CreateOutgoingWebhookRequest.md  CreatePostEphemeralRequest.md  CreatePostEphemeralRequestPost.md  CreatePostRequest.md  (+323 more)
src/apis/: authentication_api.rs  bleve_api.rs  bots_api.rs  brand_api.rs  channels_api.rs  cloud_api.rs  cluster_api.rs  commands_api.rs  compliance_api.rs  configuration.rs  data_retention_api.rs  elasticsearch_api.rs  emoji_api.rs  exports_api.rs  files_api.rs  groups_api.rs  imports_api.rs  insights_api.rs  integration_actions_api.rs  jobs_api.rs  ldap_api.rs  mod.rs  o_auth_api.rs  open_graph_api.rs  permissions_api.rs  plugins_api.rs  posts_api.rs  preferences_api.rs  reactions_api.rs  roles_api.rs  (+14 more)
(+433 files in other folders)
