[package]
name = "mattermost-rust-client"
version = "4.0.7"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
license = "MIT"
description = "Rust client for Mattermost"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
